lintian (2.5.7) UNRELEASED; urgency=low

  * frontend/lintian:
    + [JW] Fix typo in error message.

 -- Niels Thykier <niels@thykier.net>  Wed, 14 Mar 2012 22:55:46 +0100

lintian (2.5.6) unstable; urgency=low

  * checks/*:
    + [NT] Simplified some bit operations done on file permissions.
  * checks/binaries:
    + [NT] Fix false-negative missing-dependency-on-phpapi when the
      binary included a "SOVERSION" in its name.  Thanks to Ondřej
      Surý for the report.  (Closes: #662936)
  * checks/changelog-file:
    + [NT] Do not emit "no-upstream-changelog" for transitional
      packages.  Thanks to Paul Wise for the report.
      (Closes: #660076)
  * checks/cruft:
    + [NT] Added missing "unless" in the code.  Fixes false
      positive "source-contains-waf-binary".  Thanks to
      Dmitrijs Ledkovs for the report.  (Closes: #661561)
  * checks/debhelper:
    + [NT] Fix FP executable-debhelper-file-without-being-executable
      emitted for directories.  Thanks to Felix Geyer for the report
      and the patch.  (Closes: #663447)
  * checks/files.desc:
    + [NT] Fix a typo in a tag description.  Thanks to Ludovic
      Rousseau for spotting it.  (Closes: #663759)
  * checks/scripts:
    + [NT] Allow fontforge-nox as (alternative) provider for the
      fontforge interpreter.  Thanks to Martin Erik Werner for
      the report.  (Closes: #661363)
    + [NT] Move %interpreters map to a separate data file.
  * checks/source-copyright.desc:
    + [NT] Update references for copyright-format checks.  Thanks
      to Thijs Kinkhorst for the report and the patch.
      (Closes: #661778)
    + [NT] Added trailing slash to copyright-format URLs in tag
      descriptions for consistency with the policy.

  * collection/*:
    + [NT] Removed assumption that "cwd" is the same as the
      directory for the package being examined.
  * collection/java-info:
    + [NT] Added missing "use Util".
  * collection/scripts: