@@ -3,6 +3,9 @@ lintian (2.5.7) UNRELEASED; urgency=low
   * frontend/lintian:
     + [JW] Fix typo in error message.
 
+  * lib/Lintian/Data.pm:
+    + [NT] Lazily load data files.
+
  -- Niels Thykier <niels@thykier.net>  Wed, 14 Mar 2012 22:55:46 +0100
 
 lintian (2.5.6) unstable; urgency=low
